--- a/server/public/index.html
+++ b/server/public/index.html
@@ -41,7 +41,7 @@
 
     <div class="wg-content-panel">
         <div class="column">
-            <header class="io-panel io-header"> <h2>Ausgänge:</h2> </header>
+            <header class="io-panel io-header"> <h2>Outputs:</h2> </header>
             <div class="io-panel do-panel">
                 <h2>Digital:</h2>
                 <div class="underpanel">
@@ -91,7 +91,7 @@
                         <input id="AO1_Value" type="number" value="" class="input-ao">
                         <label style="color: #7B7979;">mV</label> <br>
                         <div style="display: flex;">
-                            <button id="AO1_Write" class="ao-button" type="submit" style="background-color:#6EC800; flex-grow: 1;">Schreiben</button>
+                            <button id="AO1_Write" class="ao-button" type="submit" style="background-color:#6EC800; flex-grow: 1;">Write</button>
                         </div>
                         </form>
                     </div>
@@ -101,7 +101,7 @@
                         <input class="input-ao" id="AO2_Value" type="number" value="" >
                         <label style="color: #7B7979;">mV</label> <br>
                         <div style="display: flex;">
-                            <button id="AO2_Write" class="ao-button" type="submit" style="background-color:#6EC800; flex-grow: 1;">Schreiben</button>
+                            <button id="AO2_Write" class="ao-button" type="submit" style="background-color:#6EC800; flex-grow: 1;">Write</button>
                         </div>
                         </form>
                     </div>
@@ -128,7 +128,7 @@
         </div>
 
         <div class="column">
-            <header class="io-panel io-header"> <h1>Eingänge:</h1> </header>
+            <header class="io-panel io-header"> <h1>Inputs:</h1> </header>
             <div class="io-panel">
                 <h2>Digital:</h2>
                 <div class="underpanel grid">
@@ -184,7 +184,7 @@
                 </div>
             </div>            
             <div class="io-panel">
-                <h2>Temperatur:</h2>
+                <h2>Temperature:</h2>
                 <div class="underpanel" style="display: inline; justify-content: left">
                         <div style="display: flex;">
                             <label class="aipt-label">PT1</label>
